[project]
name = "owid-catalog"
version = "0.3.11"
description = "Core data types used by OWID for managing data."
authors = [
    {name = "Our World in Data", email = "tech@ourworldindata.org"},
]
license = "MIT"
requires-python = ">=3.9, <4.0"
dependencies = [
    "pandas>=2.2.1",
    "jsonschema>=3.2.0",
    "pyarrow>=10.0.1",
    "ipdb>=0.13.9",
    "requests>=2.26.0",
    "boto3>=1.21.13",
    "Unidecode>=1.3.4",
    "PyYAML>=6.0.1",
    "structlog>=21.5.0",
    "dynamic-yaml>=1.3.5",
    "mistune>=3.0.1",
    "dataclasses-json>=0.6.7",
    "rdata==0.9",
    "owid-datautils",
    "owid-repack",
]

[tool.uv]
dev-dependencies = [
    "pytest>=6.2.5",
    "pytest-cov>=2.12.1",
    "watchdog>=2.1.5",
    "argh>=0.26.2",
    "pyright==1.1.373",
    "pandas-stubs==1.2.0.62",
    "ruff==0.8.2"
]

[tool.uv.sources]
owid-datautils = { path = "../datautils", editable = true }
owid-repack = { path = "../repack", editable = true }

[tool.ruff]
extend = "../../pyproject.toml"

[tool.pyright]
reportIncompatibleMethodOverride = "none"
reportOverlappingOverload = "none"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["owid"]
