[project]
name = "owid-catalog"
version = "0.4.3"
description = "Core data types used by OWID for managing data."
readme = "README.md"
authors = [
    {name = "Our World in Data", email = "tech@ourworldindata.org"},
]
license = "MIT"
requires-python = ">=3.10, <4.0"
dependencies = [
    "pandas>=2.2.3",
    "jsonschema>=3.2.0",
    "pyarrow>=10.0.1",
    "ipdb>=0.13.9",
    "requests>=2.26.0",
    "Unidecode>=1.3.4",
    "PyYAML>=6.0.1",
    "structlog>=21.5.0",
    "dynamic-yaml>=1.3.5",
    "mistune>=3.0.1",
    "dataclasses-json>=0.6.7",
    "pyreadr>=0.5.0",
    "owid-datautils",
    "owid-repack",
    "jinja2>=3.1.6",
    "typing-extensions>=4.7.1",
    "rdata>=0.11.2",
]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

[tool.uv]
dev-dependencies = [
    "pytest>=6.2.5",
    "pytest-cov>=2.12.1",
    "watchdog>=2.1.5",
    "argh>=0.26.2",
    "pyright==1.1.373",
    "pandas-stubs==1.2.0.62",
    "ruff==0.8.6"
]

[tool.uv.sources]
owid-datautils = { path = "../datautils", editable = true }
owid-repack = { path = "../repack", editable = true }

[tool.ruff]
extend = "../../pyproject.toml"

[tool.pyright]
reportIncompatibleMethodOverride = "none"
reportOverlappingOverload = "none"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["owid"]

[project.urls]
Homepage = "https://github.com/owid/etl/tree/master/lib/catalog"
Repository = "https://github.com/etl/etl.git"

