[project]
name = "owid-catalog"
version = "0.4.5"
description = "Core data types used by OWID for managing data."
readme = "README.md"
authors = [
    {name = "Our World in Data", email = "tech@ourworldindata.org"},
]
license = "MIT"
requires-python = ">=3.10, <4.0"
dependencies = [
    "pandas>=2.2.3",
    "jsonschema>=3.2.0",
    "pyarrow>=10.0.1",
    "ipdb>=0.13.9",
    "requests>=2.26.0",
    "Unidecode>=1.3.4",
    "PyYAML>=6.0.1",
    "structlog>=21.5.0",
    "dynamic-yaml>=1.3.5",
    "mistune>=3.0.1",
    "dataclasses-json>=0.6.7",
    "pyreadr>=0.5.0",
    "owid-datautils",
    "owid-repack",
    "jinja2>=3.1.6",
    "typing-extensions>=4.7.1",
    "rdata>=0.11.2",
    "rapidfuzz>=3.14.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=6.2.5",
    "pytest-cov>=2.12.1",
    "watchdog>=2.1.5",
    "argh>=0.26.2",
    "ty>=0.0.4",
    "pandas-stubs==1.2.0.62",
    "ruff==0.8.6",
    "ipykernel>=6.29.0",
]

[tool.uv.sources]
owid-datautils = { path = "../datautils", editable = true }
owid-repack = { path = "../repack", editable = true }

[tool.ruff]
extend = "../../pyproject.toml"

[tool.ty.rules]
invalid-method-override = "ignore"
parameter-already-assigned = "ignore"
redundant-cast = "ignore"
possibly-missing-attribute = "ignore"
no-matching-overload = "ignore"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["owid"]

[project.urls]
Homepage = "https://github.com/owid/etl/tree/master/lib/catalog"
Repository = "https://github.com/etl/etl.git"

