[tool.poetry]
name = "walden"
version = "0.1.0"
description = ""
authors = ["Our World in Data <tech@ourworldindata.org>"]
packages = [{ include = "owid" }]

[tool.poetry.dependencies]
python = "^3.8.1"
jsonschema = ">=3.2.0"
click = ">=8.0.1"
sh = ">=1.14.2"
boto3 = ">=1.17.112"
dataclasses-json = ">=0.5.4"
requests = ">=2.26.0"
pandas = ">=1.3.4"
openpyxl = ">=3.0.9"
rich = ">=12.1.0"
beautifulsoup4 = ">=4.11.1"
structlog = ">=21.5.0"
owid-datautils = {path = "../datautils", develop = true}
pyrsistent = ">=0.19.1"
owid-repack = ">=0.1.1"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.4"
watchdog = ">=2.1.3"
PyYAML = ">=5.4.1"
argh = ">=0.26.2"
black = ">=22.3.0"
flake8 = ">=3.9.2"
types-requests = ">=2.25.2"
requests-mock = ">=1.9.3"
tqdm = ">=4.62.3"
jupyter = ">=1.0.0"
jupytext = ">=1.13.7"
jupyter_nbextensions_configurator = ">=0.4.1"
types-PyYAML = ">=6.0.5"
isort = ">=5.10.1"
pyright = ">=1.1.278"

[tool.isort]
profile = "black"
extend_skip = [".ipynb_checkpoints"]

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
