[project]
name = "walden"
version = "0.1.1"
description = ""
authors = [
    {name = "Our World in Data", email = "tech@ourworldindata.org"},
]
requires-python = ">=3.9, <4.0.0"
dependencies = [
    "jsonschema>=3.2.0",
    "click>=8.0.1",
    "sh>=1.14.2",
    "boto3>=1.17.112",
    "dataclasses-json>=0.5.4",
    "requests>=2.26.0",
    "pandas>=1.3.4",
    "openpyxl>=3.0.9",
    "rich>=12.1.0",
    "beautifulsoup4>=4.11.1",
    "structlog>=21.5.0",
    "pyrsistent>=0.19.1",
    "owid-repack",
    "owid-datautils",
]

[tool.uv]
dev-dependencies = [
    "pytest>=6.2.4",
    "watchdog>=2.1.3",
    "PyYAML>=6.0.1",
    "argh>=0.26.2",
    "types-requests>=2.25.2",
    "requests-mock>=1.9.3",
    "tqdm>=4.62.3",
    "jupyter>=1.0.0",
    "jupytext>=1.13.7",
    "jupyter_nbextensions_configurator>=0.4.1",
    "types-PyYAML>=6.0.5",
    "pyright==1.1.373",
    "ruff==0.8.2",
]

[tool.uv.sources]
owid-datautils = { path = "../datautils", editable = true }
owid-repack = { path = "../repack", editable = true }

[tool.ruff]
extend = "../../pyproject.toml"

[tool.pyright]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["owid"]
